Adds AWS attestation.
